Wed Mar  4 18:17:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy-rm: 追加

Wed Mar  4 16:49:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/exec.rb, backend/b-exec.rb, node/n-exec.rb: exec追加

Mon Mar  2 17:59:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy-cp: 追加
	* etc/fairy.conf, share/conf.rb: CONF.VF_SPLIT_SIZE 追加

Fri Feb 27 21:37:13 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: buffering policy framework 追加, FileBufferdQueue 追加
	* b-inputtable.rb, b-local-file-output.rb, b-merge-group_by.rb,
	  bhere.rb, fairy.conf, n-direct-product.rb, n-file-output.rb,
	  n-filter.rb modified: node/n-group-by.rb, n-join.rb,
	  n-local-file-output.rb, n-single-exportable.rb, n-splitter.rb,
	  n-zipper.rb, block-source.rb: buffering policy framework 対応
	* */addins.rb: *19.rb, *18.rb 対応
	* b-inputtable18.rb, b-inputtable19.rb, sort19.rb: それそれのバー
	  ジョン対応ファイル分離
	
Mon Feb 16 19:55:39 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* ruby1.8でいつのまにか動かなくなっていた対応

Mon Feb 16 18:57:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* ruby1.9系で例外の伝搬がうまく行かない対応(ruby1.9のバグだった)
	* etc/fairy.conf: ruby-1.9.1をテストの標準にした, 
			  DEBUG_FULL_BACKTRACEを追加
	* share/block-source.rb, share/conf.rb: DEBUG_FULL_BACKTRACE対応

Thu Feb 12 18:25:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/sort.rb: 順序値指定ブロックを指定できるようにした.

Tue Feb 10 20:50:07 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/sort.rb, share/conf.rb, etc/fairy.rb: sort追加
	* share/varray.rb: VArray#size, VArray#arrays_each 追加

Tue Feb 10 17:36:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mod-group-by.rb: MergeSortBuffer追加

Tue Feb 10 16:11:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/n-mod-group-by.rb, share/conf.rb, etc/fairy.conf: 
	  CommandMergeSortBuffer追加

Tue Feb 10 14:13:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/port.rb: 要素転送時にリファレンスを渡す機能を追加
	  (merge_group_by対応)
	