@@ -42,6 +42,7 @@ module Fairy
   CONF.LOG_FILE = "/tmp/fairy/log"
   CONF.LOG_FLUSH_INTERVAL = 1
   CONF.LOG_LEVEL = :DEBUG
+  CONF.LOG_IMPORT_NTIMES_POP = 1000
 
   CONF.DEBUG_PORT_WAIT = false
   CONF.DEBUG_FULL_BACKTRACE = false
